# string-similarity

./: LICENSE  README.md  pyproject.toml
src/string_similarity/: __init__.py  example.py  string_similarity.py
src/string_similarity.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/string_similarity/extensions/: string_extension.py
src/string_similarity/models/: best_match.py  rating.py
